--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@angular/common": "^17.2.2",
     "@angular/compiler": "^17.2.2",
     "@angular/core": "^17.2.2",
-    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "^17.2.2",
     "@angular/material": "^17.2.1",
     "@angular/platform-browser": "^17.2.2",
@@ -35,7 +34,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "^5.1.2",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.1.0",
